Fixed layout problems in IE/Firefox

--- a/Mcss Admin/src/Appva.Mcss.Admin/Assets/css/main.css
+++ b/Mcss Admin/src/Appva.Mcss.Admin/Assets/css/main.css
@@ -1374,6 +1374,7 @@ td.rights {
     background:#cfd6e5;
     min-width:420px;
     margin:20px;
+    border-radius:0 0 3px 3px;
 }
 #setlist-content h1 {
     background:#445068;
@@ -1382,12 +1383,18 @@ td.rights {
     padding:14px 20px;
     font-size:18px;
     font-weight:bold;
+    border-radius:3px 3px 0 0;
+}
+#setlist .item-view {
+    display:table;
+    width:100%;
+    height:100%;
 }
 #setlist {
     display:flex;
     flex-wrap:wrap;
     list-style-type:none;
-    padding:20px 0 0 20px;
+    padding:15px 0 0 15px;
     height:100%;
 }
 #setlist li {
@@ -1402,12 +1409,13 @@ td.rights {
     display:flex;
     flex-direction:column;
     background-color:#fff;
-    margin:0 20px 20px 0;
+    margin:0 15px 15px 0;
     padding:0;
     color:#222;
     box-shadow:0 0 6px #95aab8;
     transition:box-shadow .5s ease;
     overflow:auto;
+    border-radius:3px;
 }
 #setlist li a{
     text-decoration:none;
@@ -1427,12 +1435,14 @@ td.rights {
 #setlist .success-message {
     align-self:center;
     text-align:center;
+    background:#333;
     margin:auto;
-    width:230px;
+    width:220px;
     font-size:14px;
     font-weight:bold;
     color:#fff;
-    padding:14px 6px;
+    padding:12px 4px;
+    border-radius:3px;
 }
 #setlist .header {
     display:table-row;
@@ -1448,14 +1458,13 @@ td.rights {
     color:#222;
 }
 #setlist h3 {
-    font-family:monospace;
-    font-size:13px;
+    font-size:11px;
     font-weight:bold;
     text-transform:uppercase;
     letter-spacing:.05em;
     line-height:1.2em;
     color:#222;
-    padding:13px 12px 8px 11px;
+    padding:13px 12px 8px 10px;
     overflow:hidden;
     white-space:nowrap;
     border-bottom:1px solid #ddd;
@@ -1466,7 +1475,7 @@ td.rights {
     display:inline-block;
     width:12px;
     height:3px;
-    margin:-4px 10px 0 0;
+    margin:-5px 8px 0 0;
     border:10px double #fff;
 }
 #setlist h4{
@@ -3096,8 +3105,7 @@ form .time {width:4em;}
     width:32px;
     height:auto;
 }
-#pr-panel input[type="text"], #pr-panel input[type="number"],
-#setlist input[type="text"] {
+#pr-panel input[type="text"], #pr-panel input[type="number"] {
     padding:6px;
     font-size:13px;
     width:100%;
@@ -3174,7 +3182,6 @@ form .time {width:4em;}
     padding:12px 15px 11px 15px;
     margin:1px 0 1px 1px;
     font-weight:bold;
-    background:#fff;
 }
 #setlist .section-label {
     max-width:200px;
@@ -3195,12 +3202,13 @@ form .time {width:4em;}
     white-space:nowrap;
     text-overflow:ellipsis;
 }
-#setlist input[type="number"], #setlist input[type="text"] { padding:13px 14px 12px 165px; }
-#setlist input[type="time"] { padding:11px 14px 10px 165px; }
+#setlist input[type="time"], #setlist input[type="text"] { height:43px; }
+#setlist input[type="number"] { height:42px; }
 #setlist input[type="number"], #setlist input[type="text"], #setlist input[type="time"] {
     background:rgba(255, 255, 255, 0.7);
     font-size:13px;
     width:100%;
+    padding:13px 14px 12px 165px;
     border-style:solid;
     border-color:#ddd;
     box-sizing:border-box;
@@ -3238,6 +3246,7 @@ form .time {width:4em;}
     padding:13px 15px;
     box-sizing:border-box;
     outline:none;
+    border-radius:3px;
     transition:background .3s ease;
 }
 #setlist button:hover { background:#4Caf50; }
